test/files/neg/t10073.check
t10073.scala:7: error: tpe Unused is an unresolved spliceable type
  "".yo()
  ^
1 error
